tests/error/class_inside.gw
// [contains] declared inside itself
 class c { c var; }
